deployment/apps/longhorn/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-ui-service
  namespace: longhorn-system
spec:
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  selector:
    app: longhorn-ui
