deployment/apps/longhorn/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-system-http
  namespace: longhorn-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-https
  hostnames:
  - longhorn.apps.example.com
  rules:
  - matches:
    - path:	
        type: PathPrefix	
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: longhorn-ui-service
      port: 8000
      weight: 1
